--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ pymysql==1.1.0
 passlib[bcrypt]==1.7.4
 python-jose==3.3.0
 requests==2.31.0
-marshmallow==3.21.1
-pyngrok==6.0.0
+marshmallow==3.17.0
 python-dotenv==1.0.1
+transbank-sdk==4.0.0
+jinja2==3.1.3
+bcrypt==4.1.2
